[package]
name = "specificity"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
description = "Calculate the CSS specificity (a, b, c) of a selector — :is/:not/:has/:where aware. Zero dependencies, no_std."
documentation = "https://docs.rs/specificity"
repository = "https://github.com/trananhtung/specificity"
homepage = "https://github.com/trananhtung/specificity"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["css", "specificity", "selector", "cascade", "cssom"]
categories = ["web-programming", "parser-implementations", "no-std"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
